2003-12-12 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* HtmlEmitter.cs : Fixed incorrect character entity output.

2003-12-11 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Added ScriptCompilerInfo.cs.
	* MSXslScriptManager.cs : Fixed *true* author's name.
	  Implemented basic msxsl:script support.
	* Compiler.cs : Added Evidence member.

2003-12-07 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Compiler.cs : Check stylesheet recursion. Check decimal-format name.
	* GenericOutputter.cs, Outputter.cs, TextOutputter.cs :
	  Added WriteWhitespace() to assure not writing whitespaces as cdata.
	* XslAttributeSet.cs : Error check if attribute-set contains other than
	  xsl:attribute.  Error should be XsltException.
	* XslDecimalFormat.cs : Complete equality check.  Allow just one
	  character value for some attributes.
	* XslStylesheet.cs : Made whitespace control setting overridable.
	  Added Version property (for the future compatibility mode).
	  Check unrecongnized top level element.
	* XslTemplate.cs : Check priority as a number.
	* XslTransformProcessor.cs : PushCDataState is now PushElementState, 
	  for xsl:preserve-space and xsl:strip-space support.
	* XsltCompiledContext.cs : Implemented PreserveWhitespace() (far from
	  incomplete), PushScope and Pop

2003-12-03 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* HtmlEmitter.cs : CloseStartElement is needed almost everywhere.

2003-12-02 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Compiler.cs : In FromListString(), it should use default ns,
	  not unqualified one.
	* GenericOutputter.cs : CheckState() - attribute's Prefix should take
	  precedence.  Doctype should be written even if SYSTEM id is absent.
	  Fixed possible multiple xmlns output.
	* HtmlEmitter.cs :
	  - Encoding output using META element.
	  - Doctype name is fixed (html).
	  - Double quotation on PUBLIC and SYSTEM missing.
	  - Fixed incorrect tag name check for IMG.
	  - '>' should not be escaped.
	* XmlWriterEmitter.cs :